# denmark

./: Cargo.toml  README.md
backend/: Cargo.toml
backend/examples/: distinct.rs  filter.rs
backend/queries/BBR_relations/: ejendomrelation.query.graphql
backend/schemas/: BBR.graphql
backend/src/: bbr.rs  cvr.rs  main.rs  telemetry.rs
backend/src/datafordeler/: bbr.rs  cvr.rs  mod.rs
