[package]
name = "backend"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
dotenvy = {version = "0.15.7"}
graphql_client = {version = "0.14.0"}
reqwest = "0.12.24"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145" }
tokio = { version = "1.48.0", features = ["full"] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
